[gd_scene load_steps=8 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 30, 1, 30 )

[sub_resource type="CubeMesh" id=2]
size = Vector3( 60, 2, 60 )

[sub_resource type="CylinderMesh" id=3]

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 1, 0.478431, 0.129412, 1 )

[sub_resource type="Curve3D" id=5]
_data = {
"points": PoolVector3Array( 0, 0, 0, 0, 0, 0, -14.0931, 0, -15.9795, 0, 0, 0, 0, 0, 0, -14.0931, 0, 16.804, 0, 0, 0, 0, 0, 0, 13.8781, 0, 16.9544, 0, 0, 0, 0, 0, 0, 13.8781, 0, -15.9795, 0, 0, 0, 0, 0, 0, -14.0931, 0, -15.9795 ),
"tilts": PoolRealArray( 0, 0, 0, 0, 0 )
}

[node name="Main" type="Node"]
script = ExtResource( 2 )

[node name="Ground" type="StaticBody" parent="."]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="Ground"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="Ground"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 40, 0 )
shadow_enabled = true

[node name="Player" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.53519, -0.127422, 0.834938 )

[node name="CameraPivot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 0.766044, 0.642788, 0, -0.642788, 0.766044, 0, 0, 0 )

[node name="Camera" type="Camera" parent="CameraPivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 19 )
projection = 1
current = true
size = 19.0

[node name="Cylinders" type="Spatial" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="Cylinders"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -14, 0, -16 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="MeshInstance2" type="MeshInstance" parent="Cylinders"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -14, 0, 17 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="MeshInstance3" type="MeshInstance" parent="Cylinders"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 14, 0, -16 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="MeshInstance4" type="MeshInstance" parent="Cylinders"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 14, 0, 17 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="SpawnPath" type="Path" parent="."]
curve = SubResource( 5 )

[node name="SpawnLocation" type="PathFollow" parent="SpawnPath"]
transform = Transform( 0.271842, 0, -0.962342, 0, 1, 0, 0.962342, 0, 0.271842, -14.0931, 0, -15.9795 )
rotation_mode = 1

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.7
autostart = true

[connection signal="timeout" from="MobTimer" to="." method="_on_Timer_timeout"]
